Fix compilation issues - First deploy success (user micro service)